@@ -10,20 +10,9 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 public class Tests {
     @Test
     void DistributionForDism3(){
-        ArrayList<Integer> a = new ArrayList<>(Arrays.asList(2,1,0));
-        ArrayList<Integer> b = new ArrayList<>(Arrays.asList(2,0));
-        ArrayList<Integer> c = new ArrayList<>(List.of(2,1,0));
-        getMatrix();
-        assertEquals(
-                multiply(add(a,b),c),
-                add(multiply(b,c),multiply(a,c))); //(a+b)*c = a*c + b*c
-    }
-
-    @Test
-    void DistributionForDism4(){
-        ArrayList<Integer> a = new ArrayList<>(List.of(4));
-        ArrayList<Integer> b = new ArrayList<>(Arrays.asList(3,2));
-        ArrayList<Integer> c = new ArrayList<>(Arrays.asList(1,0));
+        ArrayList<Integer> a = new ArrayList<>(Arrays.asList(1,0));
+        ArrayList<Integer> b = new ArrayList<>(Arrays.asList(2,1));
+        ArrayList<Integer> c = new ArrayList<>(List.of(1,0));
         getMatrix();
         assertEquals(
                 multiply(add(a,b),c),
@@ -32,7 +21,7 @@ public class Tests {
 
     @Test
     void ErrorTest(){
-        ArrayList<Integer> a = new ArrayList<>(List.of(4));
+        ArrayList<Integer> a = new ArrayList<>(List.of(0));
         ArrayList<Integer> b = new ArrayList<>(Arrays.asList(3,2));
         ArrayList<Integer> c = new ArrayList<>(Arrays.asList(1,0));
         getMatrix();
@@ -55,36 +44,71 @@ public class Tests {
     }
 
     @Test
-    void ExponentiationForDism3(){
+    void ExponentiationForDism3_Power2(){
         ArrayList<Integer> a = new ArrayList<>(Arrays.asList(2,1));
         getMatrix();
         assertEquals(exponentiate(a,2), multiply(a,a));
     }
+
     @Test
-    void UnitsArrToStrBinTestForDism3(){
+    void ExponentiationForDism3_Power3(){
         ArrayList<Integer> a = new ArrayList<>(Arrays.asList(2,1));
-        String expected = "110";
-        assertEquals(UnitsArrToStrBin(a), expected);
+        getMatrix();
+        assertEquals(exponentiate(a,3), multiply(multiply(a,a),a));
     }
 
     @Test
-    void StrBinVecToUnitsArrTestForDism3(){
-        String a = "101";
-        ArrayList<Integer> expected = new ArrayList<>(Arrays.asList(2,0));
-        assertEquals(StrBinVecToUnitsArr(a), expected);
+    void ExponentiationForDism3_Power4(){
+        ArrayList<Integer> a = new ArrayList<>(Arrays.asList(2,1));
+        getMatrix();
+        assertEquals(exponentiate(a,4), multiply(multiply(a,a),multiply(a,a)));
     }
 
     @Test
-    void ArrBinVecToUnitsArrTestForDism3(){
-        int[] a = {1,1,0};
-        ArrayList<Integer> expected = new ArrayList<>(Arrays.asList(2,1));
-        assertEquals(ArrBinVecToUnitsArr(a), expected);
+    void ExponentiationForDism239_Power2(){
+        ArrayList<Integer> a = new ArrayList<>(Arrays.asList(137,42,41,18,10,11));
+        getMatrix();
+        assertEquals(exponentiate(a,2), multiply(a,a));
     }
 
     @Test
-    void UnitsArrToArrBinVecForDism3(){
-        ArrayList<Integer> a = new ArrayList<>(List.of(1));
-        int[] expected = {0,1,0};
-        assertEquals(Arrays.toString(UnitsArrToArrBinVec(a)), Arrays.toString(expected));
+    void ExponentiationForDism239_Power3(){
+        ArrayList<Integer> a = new ArrayList<>(Arrays.asList(137,42,41,18,10,11));
+        getMatrix();
+        assertEquals(exponentiate(a,3), multiply(multiply(a,a),a));
     }
+
+    @Test
+    void ExponentiationForDism239_Power4(){
+        ArrayList<Integer> a = new ArrayList<>(Arrays.asList(137,42,41,18,10,11));
+        getMatrix();
+        assertEquals(exponentiate(a,4), multiply(multiply(a,a),multiply(a,a)));
+    }
+//    @Test
+//    void UnitsArrToStrBinTestForDism3(){
+//        ArrayList<Integer> a = new ArrayList<>(Arrays.asList(2,1));
+//        String expected = "011";
+//        assertEquals(UnitsArrToStrBin(a), expected);
+//    }
+//
+//    @Test
+//    void StrBinVecToUnitsArrTestForDism3(){
+//        String a = "101";
+//        ArrayList<Integer> expected = new ArrayList<>(Arrays.asList(0,2));
+//        assertEquals(StrBinVecToUnitsArr(a), expected);
+//    }
+//
+//    @Test
+//    void ArrBinVecToUnitsArrTestForDism3(){
+//        int[] a = {1,1,0};
+//        ArrayList<Integer> expected = new ArrayList<>(Arrays.asList(0,1));
+//        assertEquals(ArrBinVecToUnitsArr(a), expected);
+//    }
+//
+//    @Test
+//    void UnitsArrToArrBinVecForDism3(){
+//        ArrayList<Integer> a = new ArrayList<>(List.of(2));
+//        int[] expected = {0,0,1};
+//        assertEquals(Arrays.toString(UnitsArrToArrBinVec(a)), Arrays.toString(expected));
+//    }
 }
